message AllSupported {
  required bool boolean = 1;
  required int32 int = 2;
  required int64 long = 3;
  repeated int32 listOfInt = 4;
  required string string = 5;
  required float float = 6;
  required int32 short = 7;
  required double double = 8;
  required bytes byteArray = 9;
  required int64 localDate = 10;
  required Timestamp localDateTime = 11;
  required string uuid = 12;
  required string enumeration = 13;
  required string bigDecimal = 14;

  oneof either_field {
    string eitherFieldLeft = 15;
    int32 eitherFieldRight = 16;
  }

  required Child child = 17;

  oneof Digital_oneof {
    Digital digital = 18;
    CompactDisc compact_disc = 19;
    Album album = 20;

  }

  required int32 int2 = 21;


  message Timestamp {
    required int64 seconds = 1;
    required int64 nanos = 2;
  }


  message Child {
    optional bool boolean = 1;
    optional int32 int = 2;
    optional int64 long = 3;
    repeated int32 listOfInt = 4;
    optional string string = 5;
    optional float float = 6;
    optional int32 short = 7;
    optional double double = 8;
    optional bytes byteArray = 9;
    optional int64 localDate = 10;
    optional Timestamp localDateTime = 11;
    optional string uuid = 12;
    optional string enumeration = 13;
    optional string bigDecimal = 14;

    oneof either {
      string eitherLeft = 15;
      int32 eitherRight = 16;
    }

  }


  message Digital {
    required string name = 1;
    required string format = 2;
  }


  message CompactDisc {
    required string name = 1;
    required string cdQuality = 2;
    required string caseQuality = 3;
  }


  message Album {
    required string name = 1;
    required string albumQuality = 2;
    required string coverQuality = 3;
  }

}